Users can create company cards on their dashboard which link to unique schedules. Users also have the ability to delete company cards that they have been created.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@devexpress/dx-react-core": "^4.0.5",
     "@devexpress/dx-react-scheduler": "^4.0.5",
     "@devexpress/dx-react-scheduler-material-ui": "^4.0.5",
+    "@firebase/database": "^1.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
-    "firebase": "^10.0.0",
+    "firebase": "^9.23.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
