--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "@devexpress/dx-react-core": "^4.0.5",
     "@devexpress/dx-react-scheduler": "^4.0.5",
     "@devexpress/dx-react-scheduler-material-ui": "^4.0.5",
+    "@firebase/auth": "^1.1.0",
     "@firebase/database": "^1.0.1",
+    "@headlessui/react": "^1.7.15",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "^20.4.4",
+    "@types/react": "^18.2.16",
+    "@types/react-dom": "^18.2.7",
+    "aos": "^2.3.4",
     "chart.js": "^4.3.0",
     "chartjs-adapter-moment": "^1.0.1",
     "firebase": "^9.23.0",
@@ -22,6 +28,7 @@
     "react-router": "^6.14.1",
     "react-router-dom": "^6.11.2",
     "react-transition-group": "^4.4.5",
+    "typescript": "^5.1.6",
     "use-history": "^1.4.1"
   },
   "devDependencies": {
